--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ p{
     <main>
       <div class="flex-container">
         <div class="co1">
+          <img scr="icon-luxury.svg">
           <link rel="image/svg" href="/Desktop/cssflex/images/icon-luxury.svg"/>
           <h3>SEDAN</h3>
           <p>Choose a Sedan for its</p>
@@ -86,6 +87,7 @@ p{
           <button class="b1">Learn More</button>
         </div>
         <div class="co2">
+           <img scr="icon-luxury.svg">
           <h3>SUVS</h3>
           <p>Take an SUVS for its spacious</p>
           <p>interior, power</p>
@@ -95,6 +97,7 @@ p{
           <button class="b2">Learn More</button>
         </div>
         <div class="co3">
+           <img scr="icon-luxury.svg">
           <h3>LUXURY</h3>
           <p>Cruise in the best car brands</p>
           <p>without the bloated price</p>
