--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ p{
     <main>
       <div class="flex-container">
         <div class="co1">
-          <img scr="icon-luxury.svg">
+          <img scr="icon-sedans.svg">
           <link rel="image/svg" href="/Desktop/cssflex/images/icon-luxury.svg"/>
           <h3>SEDAN</h3>
           <p>Choose a Sedan for its</p>
