--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ p{
           <button class="b1">Learn More</button>
         </div>
         <div class="co2">
-           <img scr="icon-luxury.svg">
+           <img scr="icon-suvs.svg">
           <h3>SUVS</h3>
           <p>Take an SUVS for its spacious</p>
           <p>interior, power</p>
